PUBLICAPI-902: fix name

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# The following authors have created the source code of "Nebius Node-JS SDK"
+# The following authors have created the source code of "Nebius AI SDK for Node.js"
 # published and distributed by NEBIUS BV as the owner:
 #
 # This does not necessarily list everyone who has contributed code,
